feat: modificar sample e readme

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
-# Server Configuration
+# .env.sample
+
+# Server Port
 PORT=3090
 
 # Database Configuration
@@ -6,13 +8,17 @@ DB_TYPE='mysql'
 DB_HOST='database-relatify.cjgcg6qi8y4u.us-east-1.rds.amazonaws.com'
 DB_PORT=3306
 DB_USERNAME='admin'
-DB_PASSWORD='your_password_here'
+DB_PASSWORD='YOUR_DATABASE_PASSWORD'
 DB_DATABASE='relatify_parana'
 DB_SYNCHRONIZE=false
 DB_LOGGING=true
 
 # JWT Configuration
-JWT_SECRET="your_jwt_secret_here"
+JWT_SECRET="YOUR_JWT_SECRET"
 
 # Bearer Token
-BEARER_TOKEN="your_bearer_token_here"
+BEARER_TOKEN="YOUR_BEARER_TOKEN"
+
+# Mailer Configuration
+MAILER_URL="https://mailer-microservice-production.up.railway.app/send-mail"
+MAILER_TOKEN="YOUR_MAILER_TOKEN"
